--- a/.github/workflows/commit-workflow.yaml
+++ b/.github/workflows/commit-workflow.yaml
@@ -14,7 +14,7 @@ jobs:
       #
       - uses: actions/checkout@main
         with:
-          name: vibrantgames/source
+          repository: vibrantgames/source
 
       #
       # Install pre-requisite commands and libraries:
