GitHub Actions NPCs YAML to HTML: still doesn't like my attempt to checkout source repo...

--- a/.github/workflows/commit-workflow.yaml
+++ b/.github/workflows/commit-workflow.yaml
@@ -12,9 +12,10 @@ jobs:
       #
       # Checkout the source repository:
       #
-      - uses: actions/checkout@main
+      - uses: actions/checkout@v2
         with:
           repository: vibrantgames/source
+          branch: main
 
       #
       # Install pre-requisite commands and libraries:
