GitHub Actions NPCs YAML to HTML still trying to checkout source repo...

--- a/.github/workflows/commit-workflow.yaml
+++ b/.github/workflows/commit-workflow.yaml
@@ -15,7 +15,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: vibrantgames/source
-          branch: main
+          # The main branch:
+          ref: refs/heads/main
 
       #
       # Install pre-requisite commands and libraries:
