--- a/.github/workflows/commit-workflow.yaml
+++ b/.github/workflows/commit-workflow.yaml
@@ -14,7 +14,7 @@ jobs:
       #
       - uses: actions/checkout@v2
         with:
-          repository: vibrantgames/source
+          repository: vibrant-games/source
           # The main branch:
           ref: refs/heads/main
 
