Trying to get GitHub Action NPC YAML->HTML conversion working.  What's this button do...?  (persist-credentials turned off)

--- a/.github/workflows/commit-workflow.yaml
+++ b/.github/workflows/commit-workflow.yaml
@@ -17,6 +17,7 @@ jobs:
           repository: vibrant-games/source
           # The main branch:
           ref: refs/heads/main
+          persist-credentials: false
 
       #
       # Install pre-requisite commands and libraries:
