Step by step...  Now have the wrong path to the NPCs.

--- a/.github/workflows/commit-workflow.yaml
+++ b/.github/workflows/commit-workflow.yaml
@@ -33,7 +33,7 @@ jobs:
       #
       # Convert all NPCs from YAML to HTML:
       #
-      - run: ./source/applications/tools/npcs_yaml_to_html.sh .
+      - run: ./source/applications/tools/npcs_yaml_to_html.sh ./content
 
       #
       # Commit the NPC HTML files to the content repository:
