--- a/.github/workflows/commit-workflow.yaml
+++ b/.github/workflows/commit-workflow.yaml
@@ -40,7 +40,8 @@ jobs:
       #
       - uses: EndBug/add-and-commit@v7
         with:
-          add: './content/npcs/html'
+          cwd: './content'
+          add: 'npcs/html'
           author_name: GitHub Actions NPCs YAML-to-HTML
           author_email: jtienhaara@yahoo.com
           message: 'GitHub Actions NPCs YAML-to-HTML conversion'
