--- a/.github/workflows/commit-workflow.yaml
+++ b/.github/workflows/commit-workflow.yaml
@@ -40,8 +40,7 @@ jobs:
       #
       - uses: EndBug/add-and-commit@v7
         with:
-          cwd: './content'
-          add: 'npcs/html'
+          add: 'content'
           author_name: GitHub Actions NPCs YAML-to-HTML
           author_email: jtienhaara@yahoo.com
           message: 'GitHub Actions NPCs YAML-to-HTML conversion'
