GitHub Actions automatically convert NPCs YAML -> HTML except it didn't bother to commit anything to github

--- a/.github/workflows/commit-workflow.yaml
+++ b/.github/workflows/commit-workflow.yaml
@@ -41,7 +41,7 @@ jobs:
       - uses: EndBug/add-and-commit@v7
         with:
           cwd: '.'
-          add: 'content'
+          add: 'content/npcs/html'
           author_name: GitHub Actions NPCs YAML-to-HTML
           author_email: jtienhaara@yahoo.com
           message: 'GitHub Actions NPCs YAML-to-HTML conversion'
