--- a/npcs/chloe_middleton.yaml
+++ b/npcs/chloe_middleton.yaml
@@ -54,6 +54,15 @@ metadata:
   - wordpress_id: 974
 
   #
+  # Notes from the author(s) about what the seed for the
+  # character was, or whatever.  For internal use only.
+  #
+  # Optional.  0 or more.
+  #
+  author-notes:
+  -  Chloe is wearing town militia armor; she is most likely not as prestigious as a Neverwinter guard, but here is some inspiration as to what militia or town guard armor might look like: https://www.google.com/search?q=neverwinter+guard+armor&rlz=1C1CHBF_enCA820CA820&sxsrf=ALeKk03-Dy3ricojaTeIcKMr0rDUY_U4Qg:1612129711596&tbm=isch&source=iu&ictx=1&fir=FhyfQ1b2tK1qBM%252CrZZd1DZreWK-SM%252C_&vet=1&usg=AI4_-kTyajWuvjQytxiy0jQ-bKY39lRVWA&sa=X&ved=2ahUKEwjDiaqWk8fuAhVEj1kKHd4VDFMQ9QF6BAgNEAE#imgrc=FhyfQ1b2tK1qBM
+
+  #
   # In future more metadata will likely be needed.
   # How the data was submitted, some kind of digital
   # signature giving Vibrant Games license to basically
