--- a/npcs/coalwater.yaml
+++ b/npcs/coalwater.yaml
@@ -54,6 +54,16 @@ metadata:
   - wordpress_id: 961
 
   #
+  # Notes from the author(s) about what the seed for the
+  # character was, or whatever.  For internal use only.
+  #
+  # Optional.  0 or more.
+  #
+  author-notes:
+  - Coalwater is definitely a THEY / THEM, not a he / him (nor a she / her).
+  - Inspired by an amazing software developer, Ian Coldwater.
+
+  #
   # In future more metadata will likely be needed.
   # How the data was submitted, some kind of digital
   # signature giving Vibrant Games license to basically
