--- a/npcs/nagata.yaml
+++ b/npcs/nagata.yaml
@@ -54,6 +54,17 @@ metadata:
   - wordpress_id: 989
 
   #
+  # Notes from the author(s) about what the seed for the
+  # character was, or whatever.  For internal use only.
+  #
+  # Optional.  0 or more.
+  #
+  author-notes:
+  - Nagata means "long rice paddy" in Japanese, though the character is a smorgasbord of cultures.
+  - Nagata is definitely a THEY / THEM, not a he / him or a she / her.
+  - Nevertheless, they were partly inspired by Naomi Nagata from The Expanse.
+
+  #
   # In future more metadata will likely be needed.
   # How the data was submitted, some kind of digital
   # signature giving Vibrant Games license to basically
