--- a/npcs/princess_ateh.yaml
+++ b/npcs/princess_ateh.yaml
@@ -54,6 +54,16 @@ metadata:
   - wordpress_id: 985
 
   #
+  # Notes from the author(s) about what the seed for the
+  # character was, or whatever.  For internal use only.
+  #
+  # Optional.  0 or more.
+  #
+  author-notes:
+  - The Khazars were a real people who disappeared from Serbia / Croatia / the Balkans a thousand years ago.  If there is a "Yugoslavian appearance" (???), then it would suit her.
+  - Straight from the novel Dictionary of the Khazars (which is bizarre and amazing).
+
+  #
   # In future more metadata will likely be needed.
   # How the data was submitted, some kind of digital
   # signature giving Vibrant Games license to basically
