--- a/npcs/madam_stella.yaml
+++ b/npcs/madam_stella.yaml
@@ -54,6 +54,15 @@ metadata:
   - wordpress_id: 1156
 
   #
+  # Notes from the author(s) about what the seed for the
+  # character was, or whatever.  For internal use only.
+  #
+  # Optional.  0 or more.
+  #
+  author-notes:
+  - Inspired by Stella Carroll, a wooden-legged madam in Victoria, B.C. during the early 20th century into the roaring 20s.
+
+  #
   # In future more metadata will likely be needed.
   # How the data was submitted, some kind of digital
   # signature giving Vibrant Games license to basically
