--- a/npcs/scheuchzeri.yaml
+++ b/npcs/scheuchzeri.yaml
@@ -54,6 +54,15 @@ metadata:
   - wordpress_id: 984
 
   #
+  # Notes from the author(s) about what the seed for the
+  # character was, or whatever.  For internal use only.
+  #
+  # Optional.  0 or more.
+  #
+  author-notes:
+  - Straight out of War With the Newts, the funniest nihilistic science fiction novel ever written.
+
+  #
   # In future more metadata will likely be needed.
   # How the data was submitted, some kind of digital
   # signature giving Vibrant Games license to basically
