--- a/npcs/horatio_llowener_esq.yaml
+++ b/npcs/horatio_llowener_esq.yaml
@@ -70,7 +70,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Horatio Llowener Esq.
+  name: Horatio Llowener Esq
 
   #
   # The NPC artwork.
