--- a/npcs/zirrashka_brrek_zer_rash_kah_burrek.yaml
+++ b/npcs/zirrashka_brrek_zer_rash_kah_burrek.yaml
@@ -15,7 +15,7 @@ metadata:
   # For now, I suggest: convert the character name to lower case,
   # and replace all spaces and punctuation with underscores (_)
   #
-  id: zirrashka_brrek_zer_rash_kah_burrek
+  id: zirrashka_brrek
 
   #
   # The name of the submitter (your name).
