--- a/npcs/Race Abilities.yaml
+++ b/npcs/Race Abilities.yaml
@@ -344,3 +344,10 @@
        - Kenku Training: proficient in your choice of two of the following skills: Acrobatics, Deception, Stealth, and Sleight of Hand. 
        - Mimicry: can mimic sounds you have heard, including voices. A creature that hears the sounds you make can tell they are imitations with a successful Wisdom (Insight) check opposed by your Charisma (Deception) check
        - Kenku Curse: Can read and write any language they can learn, but can only use the Mimicry ability to speak
+       
+       
+   - - Merfolk Traits:
+        - The Creed of the Trickster: No merfolk will openly admit to following the creed of the trickster, but those who do view Cosi as an ally who can grant them control over the chaotic forces of the world
+        - Amphibious: You can breathe air and water
+        - Trickster Talents:  You have proficiency in the Sleight of Hand and Stealth skills
+        - Cantrips: You know one cantrip of your choice from the bard spell list spell list. Charisma is your spellcasting ability for it.
