--- a/npcs/karin_nostradaad.yaml
+++ b/npcs/karin_nostradaad.yaml
@@ -477,8 +477,7 @@ npc:
                        in the city as if you were born and raised there and you cannot be lost by non-magical means while within the city.
        - Bloodied But Unbowed: when you take damage that reduces you to half your maximum hit points or less, you can use your reaction to gain temporary hit points equal to your pugilist level + your Constitution modifier (11) and you
                                regain all expended moxie points. You cannot use this feature again until you finish a short or long rest.
-       - Fight Club: you choose a fight club that best exemplifies your style: Arena Royale, Bloodhound Bruisers, Dog & Hound, Piss & Vinegar, the Squared Circle, or the Sweet Science, all detailed at the end of the class 
-                     description. Your fight club grants you features at 3rd level and again at 6th, 11th, and 17th level.
+       - Fight Club: Piss & Vinegar
        - Dig Deep: you discover a strength inside you that can’t be broken. As a bonus action, you gain resistance to bludgeoning, piercing, and slashing damage for one minute. At the end of that minute you gain a level of 
                    exhaustion.
        - Extra Attack: you can attack twice, instead of once, whenever you take the Attack action
